@startuml
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
  BackgroundColor White
  ArrowColor Black
  BorderColor Black
}

title Diagrama de Clases UML - UniService

class "RolUsuario" as Rol {
  +id_rol : INT
  +nombre_rol : VARCHAR
}

class "Usuario" as User {
  +id_usuario : INT
  +nombre : VARCHAR
  +correo : VARCHAR
  +telefono : VARCHAR
  +universidad : VARCHAR
  +descripcion : TEXT
  +password_hash : VARCHAR
  +ultima_actividad : TIMESTAMP
  +registrar()
  +autenticar()
  +actualizarPerfil()
}

class "Categoria" as Cat {
  +id_categoria : INT
  +nombre_categoria : VARCHAR
}

class "Servicio" as Srv {
  +id_servicio : INT
  +titulo : VARCHAR
  +descripcion : TEXT
  +precio_hora : NUMERIC
  +contacto : VARCHAR
  +modalidad : INT
  +disponibilidad : INT
  +fecha_publicacion : TIMESTAMP
  +ubicacion_lat : DECIMAL
  +ubicacion_lng : DECIMAL
  +direccion : VARCHAR
  +crear()
  +actualizar()
  +eliminar()
  +pausar()
  +aprobar()
}

class "ServicioImagen" as Img {
  +id_imagen : INT
  +url_imagen : TEXT
  +es_principal : BOOLEAN
  +fecha_subida : TIMESTAMP
}

class "Solicitud" as Sol {
  +id_solicitud : INT
  +estado : VARCHAR
  +tipo_servicio : VARCHAR
  +tema : VARCHAR
  +descripcion : TEXT
  +fecha_deseada : DATE
  +hora_deseada : TIME
  +duracion : VARCHAR
  +modalidad : VARCHAR
  +metodo_pago : VARCHAR
  +presupuesto : NUMERIC
  +pago_anticipado : BOOLEAN
  +urgencia : VARCHAR
  +archivo : VARCHAR
  +campos_personalizados : JSONB
  +motivo_rechazo : TEXT
  +contraoferta : NUMERIC
  +crear()
  +aceptar()
  +rechazar()
  +completar()
}

class "Calificacion" as Cal {
  +id_calificacion : INT
  +puntuacion : SMALLINT
  +comentario : TEXT
  +fecha_calificacion : TIMESTAMP
  +calificar()
}

class "AspectoDestacado" as Asp {
  +id_aspecto : INT
  +tipo_aspecto : VARCHAR
}

class "Seguidor" as Seg {
  +seguir()
  +dejarDeSeguir()
}

class "Chat" as Cht {
  +id_chat : INT
  +fecha_creacion : TIMESTAMP
  +ultimo_mensaje : TIMESTAMP
  +crearChat()
}

class "Mensaje" as Msg {
  +id_mensaje : INT
  +mensaje : TEXT
  +fecha_envio : TIMESTAMP
  +leido : BOOLEAN
  +tipo : VARCHAR
  +enviar()
  +marcarLeido()
}

class "Reporte" as Rep {
  +id_reporte : INT
  +tipo_reporte : VARCHAR
  +titulo : VARCHAR
  +descripcion : TEXT
  +evidencia : TEXT
  +estado : VARCHAR
  +fecha_creacion : TIMESTAMP
  +fecha_resolucion : TIMESTAMP
  +resolucion_notas : TEXT
  +crear()
  +resolver()
}

Rol "1" -- "0..*" User : asigna
User "1" -- "0..*" Srv : publica
Cat "1" -- "0..*" Srv : clasifica
Srv "1" -- "0..*" Img : contiene
Srv "1" -- "0..*" Sol : recibe
User "1" -- "0..*" Sol : envía
Sol "1" -- "0..1" Cal : genera
Cal "1" -- "0..*" Asp : tiene
User "1" -- "0..*" Seg : sigue
User "1" -- "0..*" Cht : participa
Cht "1" -- "0..*" Msg : contiene
User "1" -- "0..*" Rep : crea
Srv "1" -- "0..*" Rep : asociado
User "1" -- "0..*" Rep : reportado

@enduml
